default html  lang

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ro">
+<html lang="en">
 <head>
     @@include("./content/header.html",{ "title": "Page Title", "description" : "Meta description" })
 </head>
